@@ -2,6 +2,7 @@
 - Optimized filter from gameAPI if game is saved
 - Changed DomNodeInserted event to MutationObserver
 - Added new tags : Owned, Ignored, Other
+- Added endless scroll support to other pages with games.
 
 3.2
 - Added feature to customized tags color.
